--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         />
 
     <NumberPicker
-        android:id="@+id/numberPicker5"
+        android:id="@+id/quoteNbSelector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:layout_constraintTop_creator="1"
