--- a/app/src/main/res/layout/activity_display_quote.xml
+++ b/app/src/main/res/layout/activity_display_quote.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.heinrick.quotesfordays.DisplayQuoteActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_quote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
