--- a/app/src/main/res/layout/activity_display_quote.xml
+++ b/app/src/main/res/layout/activity_display_quote.xml
@@ -6,11 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.example.heinrick.quotesfordays.DisplayQuoteActivity">
 
-    <TextView
-        android:id="@+id/tv_quote"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rcv_displayQuote"
+        android:layout_width="match_parent"
         android:layout_gravity="center"
-        android:text="@string/tv_stub"
-        android:textSize="22sp" />
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"/>
 </FrameLayout>
