--- a/app/src/main/res/layout/activity_display_quote.xml
+++ b/app/src/main/res/layout/activity_display_quote.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context="com.example.heinrick.quotesfordays.DisplayQuoteActivity">
 
+    <!-- <android.support.v7.widget.RecyclerView
+        android:id="@+id/rcv_displayQuote"
+        android:layout_width="match_parent"
+        android:layout_gravity="center"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"/> -->
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcv_displayQuote"
         android:layout_width="match_parent"
