reimplementing display quote using a viewpager

--- a/app/src/main/res/layout/activity_display_quote.xml
+++ b/app/src/main/res/layout/activity_display_quote.xml
@@ -1,22 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.heinrick.quotesfordays.DisplayQuoteActivity">
 
-    <!-- <android.support.v7.widget.RecyclerView
-        android:id="@+id/rcv_displayQuote"
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_gravity="center"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"/> -->
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rcv_displayQuote"
-        android:layout_width="match_parent"
-        android:layout_gravity="center"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"/>
-</FrameLayout>
+        android:layout_height="match_parent" >
+    </android.support.v4.view.ViewPager>
