2nd version of display quote activity functional, save quote function does not select the right quote

--- a/app/src/main/res/menu/displayed_quote_menu.xml
+++ b/app/src/main/res/menu/displayed_quote_menu.xml
@@ -10,4 +10,8 @@
         android:id="@+id/shareItem"
         android:title="@string/SHARE_MENU_ITEM"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/listItem"
+        android:title="@string/LIST_MENU_ITEM"
+        app:showAsAction="ifRoom" />
 </menu>
