--- a/app/src/main/res/values/ints.xml
+++ b/app/src/main/res/values/ints.xml
@@ -2,4 +2,5 @@
 <resources>
     <integer name="picker_min">1 </integer>
     <integer name="picker_max">10 </integer>
+    <integer name="nb_quotes_requested">10</integer>
 </resources>
