--- a/app/src/main/res/menu/quote_list_menu.xml
+++ b/app/src/main/res/menu/quote_list_menu.xml
@@ -8,7 +8,7 @@
 
     <item
         android:id="@+id/deleteItem"
-        android:title="@string/SAVE_MENU_ITEM"
+        android:title="@string/DELETE_MENU_ITEM"
         app:showAsAction="ifRoom" />
 
 
