--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#32709c</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="LAVENDER">#6d7993</color>
+    <color name="DUSTY">#96858f</color>
+    <color name="PAPER">#d5d5d5</color>
+    <color name="OVERCAST">#9099a2</color>
 </resources>
